# libcamera-apps

apps/: CMakeLists.txt  libcamera_hello.cpp  libcamera_jpeg.cpp  libcamera_still.cpp  libcamera_vid.cpp  meson.build  rpicam_still.cpp  rpicam_vid.cpp
core/: libcamera_app.cpp  libcamera_app.hpp  rpicam_app.cpp  rpicam_app.hpp
